kubernetes/applications/paperless/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: "10g"
    nginx.org/client-max-body-size: "10g"
    # nginx.ingress.kubernetes.io/server-snippet: |
    #   proxy_http_version 1.1;
    #   proxy_set_header Upgrade "websocket";
    #   proxy_set_header Connection "Upgrade";

    #   proxy_set_header Host $host;
    #   proxy_set_header X-Real-IP $remote_addr;
    #   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
    #   proxy_set_header X-Forwarded-Host $server_name;
    #   add_header Referrer-Policy "strict-origin-when-cross-origin";
    gethomepage.dev/description: Scan, index and archive all your physical documents
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Utilities
    gethomepage.dev/icon: https://raw.githubusercontent.com/paperless-ngx/paperless-ngx/refs/heads/dev/src/paperless/static/paperless/img/favicon.ico
    gethomepage.dev/name: Paperless
    gethomepage.dev/pod-selector: "app=paperless-ngx"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &hostName paperless.mcmumf.dev
      secretName: paperless.mcmumf.dev-tls
  rules:
    - host: *hostName
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-ngx
                port:
                  number: 8000
